--- a/.github/workflows/fiveThirtyEightIngestion.yml
+++ b/.github/workflows/fiveThirtyEightIngestion.yml
@@ -1,13 +1,13 @@
 name: fiveThirtyEight
 on: 
-   workflow_dispatch:
-     default:
-        description: 'run manually'
-        required: false
+#    workflow_dispatch:
+#      default:
+#         description: 'run manually'
+#         required: false
 
-#    schedule:
-#    #run daily at 5:20 UTC
-#      - cron: '20 5 * * *'
+   schedule:
+   #run daily at 5:20 UTC
+     - cron: '20 5 * * *'
 #   push:
 #    branches: [ master ]
 
