--- a/.github/workflows/fiveThirtyEightIngestion.yml
+++ b/.github/workflows/fiveThirtyEightIngestion.yml
@@ -1,13 +1,13 @@
 name: fiveThirtyEight
 on: 
-#    workflow_dispatch:
-#      default:
-#         description: 'run manually'
-#         required: false
+   workflow_dispatch:
+     default:
+        description: 'run manually'
+        required: false
 
-   schedule:
-   #run daily at 5:20 UTC
-     - cron: '20 5 * * *'
+#    schedule:
+#    #run daily at 5:20 UTC
+#      - cron: '20 5 * * *'
 #   push:
 #    branches: [ master ]
 
@@ -54,7 +54,7 @@ jobs:
       with:
           args: 'Something went wrong in the 538 economic index workflow.' # Optional
 
-  presidential-ev-prob-2020:   
+ presidential-ev-prob-2020:   
     name: 538 Electoral Vote Probabilities 2020
     runs-on: ubuntu-latest
     
@@ -97,7 +97,7 @@ jobs:
           args: 'Something went wrong in the 538 presidential-ev-probabilities-2020 workflow.' # Optional
 
 
-  presidential-national-toplines-2020:   
+ presidential-national-toplines-2020:   
     name: 538 National Toplines 2020
     runs-on: ubuntu-latest
     
@@ -140,7 +140,7 @@ jobs:
           args: 'Something went wrong in the 538 presidential-national-toplines-2020 workflow.' # Optional
 
  presidential-scenario-analysis-2020:   
-    name: 538 Electoral Vote Probabilities 2020
+    name: 538 Electoral Vote Scenario Analysis 2020
     runs-on: ubuntu-latest
     
     steps:
@@ -181,8 +181,7 @@ jobs:
       with:
           args: 'Something went wrong in the 538 presidential-scenario-analysis-2020 workflow.' # Optional
 
-
-presidential-state-toplines-2020:   
+ presidential-state-toplines-2020:   
     name: 538 State Toplines 2020
     runs-on: ubuntu-latest
     
