--- a/.github/workflows/fiveThirtyEightIngestion.yml
+++ b/.github/workflows/fiveThirtyEightIngestion.yml
@@ -55,6 +55,8 @@ jobs:
           args: 'Something went wrong in the 538 economic index workflow.' # Optional
 
  presidential-ev-prob-2020:   
+    needs: [economic-index]
+
     name: 538 Electoral Vote Probabilities 2020
     runs-on: ubuntu-latest
     
@@ -97,7 +99,8 @@ jobs:
           args: 'Something went wrong in the 538 presidential-ev-probabilities-2020 workflow.' # Optional
 
 
- presidential-national-toplines-2020:   
+ presidential-national-toplines-2020:  
+    needs: [economic-index, presidential-ev-prob-2020] 
     name: 538 National Toplines 2020
     runs-on: ubuntu-latest
     
@@ -140,6 +143,7 @@ jobs:
           args: 'Something went wrong in the 538 presidential-national-toplines-2020 workflow.' # Optional
 
  presidential-scenario-analysis-2020:   
+    needs: [economic-index, presidential-ev-prob-2020, presidential-national-toplines-2020] 
     name: 538 Electoral Vote Scenario Analysis 2020
     runs-on: ubuntu-latest
     
@@ -182,6 +186,7 @@ jobs:
           args: 'Something went wrong in the 538 presidential-scenario-analysis-2020 workflow.' # Optional
 
  presidential-state-toplines-2020:   
+    needs: [economic-index, presidential-ev-prob-2020, presidential-national-toplines-2020, presidential-scenario-analysis-2020]
     name: 538 State Toplines 2020
     runs-on: ubuntu-latest
     
